[package]
name = "intercom"
version = "0.0.1"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]

[features]
default = ["dbus_service"]
"dbus_service" = ["dbus"]

[dependencies]
time = "*"
byteorder = "*"
log = "0.3.1"
bitflags = "0.1.1"
libc = "*"
env_logger = "*"
docopt = "*"
rustc-serialize = "*"
pseudotcp = "0.1.0"
ecdh = "0.0.10"
nice = "0.0.22"
nonblocking_socket = "*"

[build-dependencies]
gcc = "*"
pkg-config = "*"

[dependencies.dbus]
version = "*"
optional = true

[dependencies.openssl]
path = "../rust-openssl/openssl"
version = "0.6.1"
features = ["dtlsv1"]
