[package]
name = "intercom"
version = "0.0.1"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]

[features]
default = ["dbus_service"]
"dbus_service" = ["dbus"]

[dependencies]
time = "*"
byteorder = "*"
log = "*"
bitflags = "*"
libc = "*"
env_logger = "*"
docopt = "*"
rustc-serialize = "*"
ecdh = "*"
nonblocking_socket = "*"

[dependencies.condition_variable]
version = "*"
path = "../condition_variable"

[build-dependencies]
gcc = "*"
pkg-config = "*"

[dependencies.dbus]
version = "*"
optional = true

[dependencies.openssl]
path = "../rust-openssl/openssl"
features = ["dtlsv1"]

[dependencies.pseudotcp]
path = "../pseudotcp"

[dependencies.nice]
path = "../nice"
